--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --kill-others \"npm run --prefix atm-api start\" \"npm run --prefix atm-app start\"",
+    "dev:install": "concurrently --kill-others \"npm install\" \"npm run --prefix atm-api dev:install\" \"npm run --prefix atm-app dev:install\"",
     "update": "concurrently --kill-others \"npm update && npm install\" \"npm run --prefix atm-api update\" \"npm run --prefix atm-app update\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
