chore: Remove package-lock.json files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules
+
+# atm-api
+./atm-api/node_modules
+./atm-api/package-lock.json
+./atm-api/build
+
+# atm-app
+./atm-app/node_modules
+./atm-app/package-lock.json
+./atm-app/build
