--- a/atm-api/package.json
+++ b/atm-api/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "docker compose up -d && tsc -p . && node build/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p .",
-    "update": "npm update && npm install",
-    "dev:install": "npm install"
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
