--- a/atm-app/package.json
+++ b/atm-app/package.json
@@ -20,9 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "update": "npm update && npm install",
-    "dev:install": "npm install"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
