--- a/atm-api/package.json
+++ b/atm-api/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "docker compose up -d && tsc -p . && node build/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +24,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.7",
     "@types/node": "^20.8.9",
     "@types/uuid": "^9.0.6",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
