chore: Implement authentication login

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "compression": "^1.7.4",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
