--- a/atm-app/package.json
+++ b/atm-app/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
   },
