--- a/atm-app/package.json
+++ b/atm-app/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.20.1",
@@ -48,6 +49,7 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
+    "@types/react-big-calendar": "^1.8.7",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
