--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install:api": "cd atm-api && npm install",
     "install:app": "cd atm-app && npm install",
-    "postinstall": "run-p install:*"
+    "postinstall": "run-p install:*",
+    "commit": "npm run install:api && npm run install:app && cd atm-app && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/lodash": "^4.14.202",
+    "husky": "^8.0.3",
     "npm-run-all": "^4.1.5"
   }
 }
