--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "install:api": "cd atm-api && npm install",
     "install:app": "cd atm-app && npm install",
     "postinstall": "run-p install:*",
+    "prepare": "npm run install:api && npm run install:app && cd atm-app && npm run build && husky install",
     "commit": "npm run install:api && npm run install:app && cd atm-app && npm run build"
   },
   "keywords": [],
