--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --kill-others \"npm run --prefix atm-api start\" \"npm run --prefix atm-app start\"",
+    "format": "prettier --write \"**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "install:api": "cd atm-api && npm install",
     "install:app": "cd atm-app && npm install",
@@ -28,6 +29,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/lodash": "^4.14.202",
     "husky": "^8.0.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "3.1.1"
   }
 }
