--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,8 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
+  "trailingComma": "all",
+  "arrowParens": "avoid",
   "useTabs": false,
   "printWidth": 80
 }
