--- a/atm-app/package.json
+++ b/atm-app/package.json
@@ -18,6 +18,7 @@
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
